--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ POM_DESCRIPTION=WebRTC Android SDK
 POM_ARTIFACT_ID=android
 POM_PACKAGING=aar
 
-POM_URL=https://github.com/webrtc-sdk/android
-POM_SCM_URL=https://github.com/webrtc-sdk/android
+POM_URL=https://github.com/webrtcsdk/android
+POM_SCM_URL=https://github.com/webrtcsdk/android
 POM_SCM_CONNECTION=scm:git:git://github.com/webrtc-sdk/android.git
 POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/webrtc-sdk/android.git
 
