--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-GROUP=io.github.webrtc-sdk
+GROUP=io.github.waterbustech
 VERSION_NAME=119.6045.02
 
 POM_NAME=WebRTC Android SDK
@@ -8,15 +8,15 @@ POM_PACKAGING=aar
 
 POM_URL=https://github.com/webrtcsdk/android
 POM_SCM_URL=https://github.com/webrtcsdk/android
-POM_SCM_CONNECTION=scm:git:git://github.com/webrtc-sdk/android.git
-POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/webrtc-sdk/android.git
+POM_SCM_CONNECTION=scm:git:git://github.com/webrtcsdk/android.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/webrtcsdk/android.git
 
 POM_LICENCE_NAME=The 3-Clause BSD License
 POM_LICENCE_URL=https://opensource.org/license/bsd-3-clause/
 POM_LICENCE_DIST=repo
 
-POM_DEVELOPER_ID=webrtc-sdk
-POM_DEVELOPER_NAME=webrtc-sdk
+POM_DEVELOPER_ID=webrtcsdk
+POM_DEVELOPER_NAME=webrtcsdk
 
 RELEASE_REPOSITORY_URL=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
 SNAPSHOT_REPOSITORY_URL=https://s01.oss.sonatype.org/content/repositories/snapshots/
