fix(): update group and artifact id

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-GROUP=io.github.waterbustech
+GROUP=tech.waterbus
 VERSION_NAME=119.6045.02
 
 POM_NAME=WebRTC Android SDK
 POM_DESCRIPTION=WebRTC Android SDK
-POM_ARTIFACT_ID=android
+POM_ARTIFACT_ID=webrtc
 POM_PACKAGING=aar
 
 POM_URL=https://github.com/webrtcsdk/android
